objects/FieloEE__MemberSegment__c.object
<CustomObject>
    <description>Segments applied to different members. Segments are applied manually.</description>
    <fields>
        <fullName>FieloEE__Member2__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Member</label>
        <referenceTo>FieloEE__Member__c</referenceTo>
        <relationshipLabel>Member Segment (Member)</relationshipLabel>
        <relationshipName>MemberSegments</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FieloEE__MemberSegmentCombination__c</fullName>
        <description>This field is for internal use. It will contain the ID of the Member and the Id of the Segment concatenated. This field is unique, so you can not relate the same Member manually twice with a Segment.</description>
        <label>Member segment combination</label>
        <length>40</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>FieloEE__Segment2__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Segment</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>FieloEE__RedemptionRule__c.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>Manual</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>FieloEE__RedemptionRule__c</referenceTo>
        <relationshipLabel>Member Segment (Segment)</relationshipLabel>
        <relationshipName>MemberSegments</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <label>Member Segment</label>
    <nameField>
        <displayFormat>MS-{0000}</displayFormat>
        <label>Member Segment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Member Segment</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>